--- a/app.env
+++ b/app.env
@@ -1,1 +1,11 @@
 JWTKEY="qwertyacid12345acidqwerty"
+
+
+SwagInfo:
+  VERSION="2.0"
+  HOST="localhost:8080"
+  BASEPATH="/"
+  SCHEMES=
+  TITLE="Zog_festiv"
+  DESCP="Yo Yo Yo 148 3 to the 3 to the 6 to the 9"
+  INTANCENAME="swagger"
