--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,8 +13,8 @@ spec:
         app: zog-api-gateway
     spec:
       containers:
-        - name: zog-api-gateway
-          image: zog_gateway
+        - name:  zog-api-gateway
+          image: edwinsiby/zog_apigateway:v1.0
           ports:
             - containerPort: 8080
           env:
@@ -26,11 +26,6 @@ spec:
               value: "service3:5252"
             - name: SERVICE4_URL
               value: "service4:5353"
-          dependsOn:
-            - name: service1
-            - name: service2
-            - name: service3
-            - name: service4
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -48,14 +43,15 @@ spec:
     spec:
       containers:
         - name: zog-authsvc
-          image: zog_authsvc
+          image: edwinsiby/zog_authsvc:v1.0
           ports:
             - containerPort: 5050
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          dependsOn:
-            - name: db
+          readinessProbe:
+            tcpSocket:
+              port: 5432
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -73,14 +69,15 @@ spec:
     spec:
       containers:
         - name: zog-adminsvc
-          image: zog_adminsvc
+          image: edwinsiby/zog_adminsvc:v1.0
           ports:
             - containerPort: 5051
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          dependsOn:
-            - name: db
+          readinessProbe:
+            tcpSocket:
+              port: 5432
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -98,14 +95,15 @@ spec:
     spec:
       containers:
         - name: zog-usersvc
-          image: zog_usersvc
+          image: edwinsiby/zog_usersvc:v1.0
           ports:
             - containerPort: 5252
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          dependsOn:
-            - name: db
+          readinessProbe:
+            tcpSocket:
+              port: 5432
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -123,14 +121,15 @@ spec:
     spec:
       containers:
         - name: zog-ordersvc
-          image: zog_ordersvc
+          image: edwinsiby/zog_ordersvc:v1.0
           ports:
             - containerPort: 5353
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          dependsOn:
-            - name: db
+          readinessProbe:
+            tcpSocket:
+              port: 5432
 ---
 apiVersion: apps/v1
 kind: Deployment
