--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name:  zog-api-gateway
-          image: edwinsiby/zog_apigateway:v1.0
+          image: edwinsiby/zog_apigateway:v2.0
           ports:
             - containerPort: 8080
           env:
@@ -23,9 +23,9 @@ spec:
             - name: SERVICE2_URL
               value: "service2:5051"
             - name: SERVICE3_URL
-              value: "service3:5252"
+              value: "service3:5052"
             - name: SERVICE4_URL
-              value: "service4:5353"
+              value: "service4:5053" 
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -43,15 +43,13 @@ spec:
     spec:
       containers:
         - name: zog-authsvc
-          image: edwinsiby/zog_authsvc:v1.0
+          image: edwinsiby/zog_authsvc:v2.0
           ports:
             - containerPort: 5050
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          readinessProbe:
-            tcpSocket:
-              port: 5432
+    
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -69,16 +67,13 @@ spec:
     spec:
       containers:
         - name: zog-adminsvc
-          image: edwinsiby/zog_adminsvc:v1.0
+          image: edwinsiby/zog_adminsvc:v2.0
           ports:
             - containerPort: 5051
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          readinessProbe:
-            tcpSocket:
-              port: 5432
----
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -95,15 +90,12 @@ spec:
     spec:
       containers:
         - name: zog-usersvc
-          image: edwinsiby/zog_usersvc:v1.0
+          image: edwinsiby/zog_usersvc:v2.0
           ports:
-            - containerPort: 5252
+            - containerPort: 5052
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          readinessProbe:
-            tcpSocket:
-              port: 5432
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -121,15 +113,13 @@ spec:
     spec:
       containers:
         - name: zog-ordersvc
-          image: edwinsiby/zog_ordersvc:v1.0
+          image: edwinsiby/zog_ordersvc:v2.0
           ports:
-            - containerPort: 5353
+            - containerPort: 5053
           env:
             - name: DSN
               value: "host=db user=edwin dbname=edwin password=acid port=5432 sslmode=disable"
-          readinessProbe:
-            tcpSocket:
-              port: 5432
+          
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -177,3 +167,6 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
+#readinessProbe:
+            #tcpSocket:
+            #  port: 5432
